--- a/src/routes/server/server.less
+++ b/src/routes/server/server.less
@@ -1,12 +1,21 @@
 .serverBox {
   // height: 100%;
+  //.btnBackground {
+  //  position: fixed;
+  //  width: 100%;
+  //  height: 50px;
+  //  background: #1a2040;
+  //  padding: 0 3%;
+  //}
   .btnGroup {
     position: fixed;
+    z-index: 9999;
     width: 100%;
     height: 50px;
     background: #1a2040;
-    padding: 0 3%;
+    padding: 0 5%;
     .btnBox {
+      position: relative;
       height: 50px;
       text-align: center;
 
@@ -21,7 +30,7 @@
         height: 50px;
         line-height:60px;
         width: 100%;
-        background: url('../../assets/tabs2.png') no-repeat;
+        background: url('../../assets/tabs.png') no-repeat;
         background-size: 100% 100%;
       }
     }
@@ -34,12 +43,25 @@
     text-align: left;
     .serverItemContainer {;
       width: 92%;
-      padding: 3% 0;
-      margin: 2.5% 4%;
+      padding: 3% 5%;
+      margin: 4% 4%;
       border-radius: 5px;
       background-color: #fff;
-      div {
-        padding: 0 5%;
+      .itemTop{
+        position: relative;
+        .time {
+          position: absolute;
+          right: 20px;
+        }
+      }
+      .title {
+        margin-top: 0.2rem;
+        font-weight: bolder;
+        font-size: 1.2rem;
+        color: #1a2040;
+      }
+      .describe {
+        color: #777;
       }
     }
   }
@@ -80,4 +102,5 @@
       }
     }
   }
+
 }
