--- a/src/routes/welcome/welcome.less
+++ b/src/routes/welcome/welcome.less
@@ -5,22 +5,27 @@
   padding: 5% 0;
   text-align: center;
 }
-.btnBox {
-  marging: 0.5ren 0;
-  //background-color: #fff;
-  text-align: center;
-  .white {
-    background-color: white;
-    border-radius: 1rem;
+.btnGroup {
+  margin-top: 0.5rem;
+  .btnBox {
+    marging: 0.5ren 0;
+    //background-color: #fff;
     text-align: center;
-    .btnImg {
-      //margin: auto auto;
-      //height: 80px;
-      //width: 80px;
-      width: 100%;
-      height: 0px;
-      padding-bottom: 100%;
+    .white {
+      margin: 0 auto;
+      background-color: white;
+      border-radius: 1rem;
+      text-align: center;
+      width: 80%;
+      height: 0;
+      padding-bottom: 80%;
+      .btnImg {
+        margin: 0 auto;
+        width: 100%;
+        height: 0px;
+        padding-bottom: 100%;
+      }
     }
   }
-
 }
+
