--- a/src/routes/personal/personal.less
+++ b/src/routes/personal/personal.less
@@ -8,6 +8,8 @@
       font-size: 2.5rem;
     }
     .otherInfo {
+      text-align: right;
+      margin-top: 0.2rem;
       font-size: 0.8rem;
       color: #777;
     }
