--- a/src/routes/server/server.less
+++ b/src/routes/server/server.less
@@ -70,15 +70,18 @@
 .serverItemInfoContainer {
   background: #f5f5f9;
   padding-bottom: 50px;
-  .stepBox {
+  .stepContainer {
     width: 90%;
-    background: lightblue;
-    margin: 2rem auto;
-    height: 8rem;
-    font-size: 3rem;
-    text-align: center;
-    line-height: 8rem;
+    margin: 0 auto;
+    padding: 0;
+    .stepBox {
+      margin: 1rem 0;
+      padding: 1rem;
+      background: white;
+      border-radius: 0.5rem;
+    }
   }
+
   .ulContainer {
     width: 90%;
     margin: 0 auto;
@@ -89,7 +92,7 @@
       list-style: none;
       background: #fff;
       margin: 1rem 0;
-      border-radius: 5px;
+      border-radius: 0.5rem;
       .btnGroup {
         margin-top: 0.5rem;
         text-align: right;
@@ -100,7 +103,26 @@
           border-radius: 5px;
         }
       }
+      .title {
+        font-size: 1.3rem;
+        font-weight: bolder;
+        text-align: center;
+        margin-bottom: 0.3rem;
+      }
     }
   }
+  .return {
+    margin-bottom: 20px;
+  }
 
+}
+
+
+.changeStageConatiner {
+  .title {
+    font-size: 1.3rem;
+    font-weight: bolder;
+    text-align: center;
+    margin-bottom: 0.3rem;
+  }
 }
