--- a/src/routes/welcome/welcome.less
+++ b/src/routes/welcome/welcome.less
@@ -1,10 +1,10 @@
 .banner {
-  background-color: lightblue;
+  background-color: white;
   height: 30%;
   font-size: 5rem;
-  padding: 5% 0;
   text-align: center;
 }
+
 .btnGroup {
   margin-top: 0.5rem;
   .btnBox {
